# mc-interface

./: .gitignore  Cargo.toml  LICENSE  README.md
interface/: Cargo.toml
interface/src/: main.rs  proc_control.rs
interface/src/styles/: app.scss
interface/static/js/: index.js
interface/static/templates/: index.html
manager/: Cargo.toml
manager/src/: main.rs
