[package]
name = "interface"
version = "0.1.0"
authors = ["Alan Panayotov <alanpanayotov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
handlebars = { version = "3.0.0", features = ["dir_source"] }
serde_json = "1.0"
sass-rs = "0.2.1"