[package]
name = "interface"
version = "0.1.0"
authors = ["Alan Panayotov <alanpanayotov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-files = "0.4.0"
actix-web-actors = "3.0.0"
handlebars = { version = "3.0.0", features = ["dir_source"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sass-rs = "0.2.1"
lazy_static = "1.4.0"
rcon = "0.3.1"
async-trait = "0.1.42"
futures = "0.3.8"